--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "reverserver_server",
+  "name": "browserve",
   "version": "0.1.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
