--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
-    "filereader-stream": "^2.0.0",
-    "ws-streamify": "^0.1.3"
+    "@anderspitman/ws-streamify": "^0.1.3",
+    "filereader-stream": "^2.0.0"
   }
 }
