--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
-    "ws-streamify": "^0.1.4",
-    "filereader-stream": "^2.0.0"
+    "filereader-stream": "^2.0.0",
+    "isomorphic-ws": "^4.0.1",
+    "ws": "^6.1.0",
+    "ws-streamify": "^0.1.4"
   }
 }
