--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fibridge-host",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "isomorphic-ws": "^4.0.1",
+    "omnistreams": "^0.2.0",
     "ws": "^6.1.0"
   }
 }
