--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
-    "isomorphic-ws": "^4.0.1",
-    "omnistreams": "^0.5.0",
-    "omnistreams-filereader": "^0.3.0",
-    "ws": "^6.1.0"
+    "omnistreams-concurrent": "^0.4.0",
+    "omnistreams-filereader": "^0.3.0"
   }
 }
