--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fibridge-host",
-  "version": "0.13.0",
+  "version": "0.16.0",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "omnistreams": "^0.7.0",
-    "omnistreams-filereader": "^0.5.0",
-    "omni-rpc": "^0.3.0"
+    "omnistreams-filereader": "^0.5.0"
   }
 }
